--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- title -->
     <h1>Infinite Scroll</h1>
     <!-- loader -->
-    <div class="loader" id="loader"><img src="assets/loader.svg" alt="" hidden/></div>
+    <div class="loader" id="loader"><img src="assets/loader.svg" alt="" /></div>
     <!-- img container -->
     <div class="image-container" id="image-container">       
     </div>
