--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <!-- title -->
     <h1>Infinite Scroll</h1>
     <!-- loader -->
-    <div class="loader" id="loader"><img src="assets/loader.svg" alt="" /></div>
-    <!-- img container -->
-    <div class="image-container" id="image-container">       
+    <div class="loader" id="loader" hidden>
+      <img src="assets/loader.svg" alt="" />
     </div>
+    <!-- img container -->
+    <div class="image-container" id="image-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
